--- a/web/splash.css
+++ b/web/splash.css
@@ -6,7 +6,7 @@
     bottom: 0;
     background: rgb(2,0,36);
     /* https://cssgradient.io/ */
-    background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(116,9,121,1) 50%, rgba(0,134,255,1) 100%);
+    background: linear-gradient(135deg, rgba(156,39,176,1) 0%, rgba(255,152,0,1) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
